[f:1.5h] Prevent display of homepage video on mobile; display still from video

--- a/src/styles/home/_header.scss
+++ b/src/styles/home/_header.scss
@@ -78,6 +78,17 @@
     left: 0;
     overflow: hidden;
     // z-index: -1;
+
+    .dimmer {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.5);
+      display: none;
+    }
+
     .bg-video {
       position: absolute;
       left: 0;
@@ -89,6 +100,18 @@
       -moz-transform: scale(1.1, 1.1);
       -webkit-transform: scale(1.1, 1.1);
       -o-transform: scale(1.1, 1.1);
+    }
+  }
+}
+@media (max-width: 61.9em) {
+  #home .video-container {
+    background      : url('/images/site/waivecar_homepage.png') no-repeat center bottom;
+    background-size : cover;
+    .bg-video {
+      display: none;
+    }
+    .dimmer {
+      display: block;
     }
   }
 }
