--- a/src/styles/home/_home.scss
+++ b/src/styles/home/_home.scss
@@ -295,6 +295,9 @@
 }
 
 @media (max-width: 61.9em) {
+  #home .section.jumbotron {
+  }
+
   #home .section.section-cars {
     height: auto;
     .cars-content {
